CHANNELMGR-1272 Fix alignment of text and dropdowns in toolbar

--- a/channel-manager/frontend-ng/src/styles/_channel.scss
+++ b/channel-manager/frontend-ng/src/styles/_channel.scss
@@ -14,10 +14,6 @@
 
 // let a linear progress indicator float 'above' the bottom of a toolbar
 // instead of taking up extra space below the toolbar
-md-toolbar > md-progress-linear {
-  bottom: 0;
-  position: absolute;
-}
 
 .input-container-picker {
   img {
