--- a/channel-manager/frontend-ng/src/styles/_toolbar.scss
+++ b/channel-manager/frontend-ng/src/styles/_toolbar.scss
@@ -71,7 +71,6 @@ md-toolbar.hippo-toolbar {
 
   md-select {
     margin: 0;
-    padding-bottom: 6px;
 
     &[disabled] md-select-value md-icon {
       color: $grey-500;
@@ -80,19 +79,13 @@ md-toolbar.hippo-toolbar {
 
   md-select-value {
     background: none !important;
-    border-bottom-width: 0 !important;
     font-weight: bold;
     margin-left: 4px;
     position: relative;
-    top: 1px;
 
     md-icon {
       color: $text-dark;
     }
-  }
-
-  md-switch {
-    margin: 0;
   }
 
   .changes-button {
@@ -108,23 +101,13 @@ md-toolbar.hippo-toolbar {
   }
 }
 
-md-toolbar md-progress-linear {
+md-toolbar > md-progress-linear {
+  bottom: 0;
   height: 2px;
+  position: absolute;
 
   .md-container {
     height: 2px;
   }
 }
 
-.project-name{
-  margin-left: 8px;
-}
-
-.viewport-name {
-  margin-left: 8px;
-
-  // hide the name of the selected viewport
-  md-select-value & {
-    display: none;
-  }
-}
